[package]
name = "Sevning"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.72.3", features = ["sse"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3.36"
futures-util = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
